[Event Microservice] Making "create" and "update" method transactional with appropriate isolation level