@@ -1,5 +1,6 @@
 package com.eve.ticketing.app.event;
 
+import org.apache.commons.lang.StringUtils;
 import org.springframework.data.jpa.domain.Specification;
 
 import java.math.BigDecimal;
@@ -8,14 +9,14 @@ import java.util.Date;
 public class EventSpecification {
 
     public static Specification<Event> eventNameEqual(String name) {
-        if (name == null || name.isBlank()) {
+        if (StringUtils.isBlank(name)) {
             return null;
         }
         return (root, query, criteriaBuilder) -> criteriaBuilder.equal(root.get("name"), name);
     }
 
     public static Specification<Event> eventUnitPriceBetween(Double minUnitPrice, Double maxUnitPrice) {
-        if (minUnitPrice == null || maxUnitPrice == null || minUnitPrice > maxUnitPrice) {
+        if (minUnitPrice == null || maxUnitPrice == null || minUnitPrice < 0 || maxUnitPrice < 0 || minUnitPrice > maxUnitPrice) {
             return null;
         }
         return (root, query, criteriaBuilder) -> criteriaBuilder.between(root.get("unitPrice"), BigDecimal.valueOf(minUnitPrice), BigDecimal.valueOf(maxUnitPrice));
@@ -36,14 +37,14 @@ public class EventSpecification {
     }
 
     public static Specification<Event> eventCountryEqual(String country) {
-        if (country == null || country.isBlank()) {
+        if (StringUtils.isBlank(country)) {
             return null;
         }
         return (root, query, criteriaBuilder) -> criteriaBuilder.equal(root.get("country"), country);
     }
 
     public static Specification<Event> eventAddressEqual(String address) {
-        if (address == null || address.isBlank()) {
+        if (StringUtils.isBlank(address)) {
             return null;
         }
         return (root, query, criteriaBuilder) -> criteriaBuilder.equal(root.get("address"), address);
